syntax = "proto3";

package todoPackage;

option go_package = "./todo";

service Todo {
    rpc CreateTodo(TodoItem) returns ( TodoItem );
    rpc ReadTodos(empty) returns (TodoItems);

}

message empty{}


message TodoItem {
    int32 id = 1;
    string text = 2;
}

message TodoItems {
    repeated TodoItem items = 1;

}